@@ -31,13 +31,7 @@
 
 #ifdef USE_LOCAL_DUMP
 
-#ifndef WORDS_BIGENDIAN
-// Little endian magic
 #define PCAP_MAGIC          0xa1b2c3d4
-#else
-// Big endian magic
-#define PCAP_MAGIC          0xd4c3b2a1
-#endif
 
 class WtapDumpFile : public virtual DumpFile {
 public:
